@@ -6,19 +6,20 @@ Uploaders: @GNOME_TEAM@
 Build-Depends: debhelper (>= 10.3~),
                gnome-pkg-tools (>= 0.11),
                dpkg-dev (>= 1.17.14),
-               gtk-doc-tools (>= 1.20),
+               gtk-doc-tools (>= 1.26),
                pkg-config,
                dbus <!nocheck>,
                gsettings-desktop-schemas <!nocheck>,
                adwaita-icon-theme <!nocheck>,
                at-spi2-core <!nocheck>,
-               libglib2.0-dev (>= 2.49.4),
+               libglib2.0-dev (>= 2.53.0),
                libgdk-pixbuf2.0-dev (>= 2.30.0),
                libpango1.0-dev (>= 1.40.5),
                libatk1.0-dev (>= 2.15.1),
                libatk-bridge2.0-dev,
                libegl1-mesa-dev [linux-any],
                libepoxy-dev,
+               libgraphene-1.0-dev (>= 1.5.1),
                libfontconfig1-dev,
                libharfbuzz-dev (>= 0.9),
                libwayland-dev (>= 1.9.91) [linux-any],
